@@ -14,6 +14,9 @@ jsoup changelog
     HTML parser. Previously that only happened when the XML parser was specified.
     <https://github.com/jhy/jsoup/issues/1009>
 
+  * Improvement: if the document's input character does not support encoding, flip it to one that does.
+    <https://github.com/jhy/jsoup/issues/1007>
+
 *** Release 1.11.3 [2018-Apr-15]
   * Improvement: CDATA sections are now treated as whitespace preserving (regardless of the containing element), and are
     round-tripped into output HTML.
